--- a/index.html
+++ b/index.html
@@ -148,20 +148,27 @@
                 <div class="timeline-connector"></div>
                 <div class="space-y-12">
                     <div class="timeline-item relative">
-                        <h3 class="text-xl font-semibold">Software Development Intern</h3>
-                        <p class="text-primary font-medium">Innovate Inc. (June 2023 - Dec 2023)</p>
+                        <h3 class="text-xl font-semibold">Zero Trust Cloud Security Virtual Internship</h3>
+                        <p class="text-primary font-medium">AICTE Eduskills (Zscaler) (Jan 2025 - Dec 2025)</p>
                         <ul class="list-disc list-inside text-secondary mt-2 space-y-1">
-                            <li>Developed and maintained features for a large-scale React application.</li>
-                            <li>Collaborated with a team of 5 to build a new REST API using Node.js and Express.</li>
-                            <li>Wrote unit tests, improving code coverage by 15%.</li>
+                            <li>Learn Zero Trust principles for securing cloud environments.</li>
+                            <li>Hands-on training with industry-relevant tools and practices.</li>
                         </ul>
                     </div>
                     <div class="timeline-item relative">
-                        <h3 class="text-xl font-semibold">Web Developer Trainee</h3>
-                        <p class="text-primary font-medium">Tech Solutions Co. (May 2022 - July 2022)</p>
+                        <h3 class="text-xl font-semibold">Solutions Architecture Job Simulation</h3>
+                        <p class="text-primary font-medium">Forage (AWS)</p>
                         <ul class="list-disc list-inside text-secondary mt-2 space-y-1">
-                            <li>Assisted in building responsive landing pages using HTML, CSS, and JavaScript.</li>
-                            <li>Learned about version control with Git and participated in code reviews.</li>
+                            <li>Designed scalable cloud solutions simulating real-world AWS architecture scenarios.</li>
+                            <li>Gained hands-on experience in building hosting architectures aligned with best practices.</li>
+                        </ul>
+                    </div>
+                    <div class="timeline-item relative">
+                        <h3 class="text-xl font-semibold">Web Developer</h3>
+                        <p class="text-primary font-medium">Prodigy Infotech</p>
+                        <ul class="list-disc list-inside text-secondary mt-2 space-y-1">
+                            <li>Completed a 1-month internship focused on practical web development skills using modern technologies.</li>
+                            <li>Delivered web projects with outstanding performance and received positive feedback from mentors.</li>
                         </ul>
                     </div>
                 </div>
@@ -308,13 +315,9 @@
                     <div>
                         <h3 class="text-xl font-bold text-primary">React Basics</h3>
                         <p class="text-secondary mt-1">Issued by Coursera | October 2024</p>
-                        <div class="mt-2 flex flex-wrap gap-2">
-                            <span
-                                class="text-xs font-medium bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-blue-100 px-2.5 py-0.5 rounded">React.js</span>
-                        </div>
                     </div>
                     <div class="flex-shrink-0 ml-4">
-                        <a href="#" class="inline-flex items-center text-primary font-semibold hover:underline">
+                        <a href="https://drive.google.com/file/d/1IvogXbqowZZIGpqdky1qdYAuetiZiG4l/view?usp=sharing" class="inline-flex items-center text-primary font-semibold hover:underline">
                             View Certificate
                             <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -330,15 +333,9 @@
                     <div>
                         <h3 class="text-xl font-bold text-primary">Introduction to Git and GitHub</h3>
                         <p class="text-secondary mt-1">Issued by Coursera | September 2024</p>
-                        <div class="mt-2 flex flex-wrap gap-2">
-                            <span
-                                class="text-xs font-medium bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-100 px-2.5 py-0.5 rounded"></span>
-                            <span
-                                class="text-xs font-medium bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-100 px-2.5 py-0.5 rounded"></span>
-                        </div>
                     </div>
                     <div class="flex-shrink-0 ml-4">
-                        <a href="#" class="inline-flex items-center text-primary font-semibold hover:underline">
+                        <a href="https://drive.google.com/file/d/12SVjsvPLIZbebeKb89wrTtb8UfjpT4La/view?usp=sharing" class="inline-flex items-center text-primary font-semibold hover:underline">
                             View Certificate
                             <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -354,17 +351,9 @@
                     <div>
                         <h3 class="text-xl font-bold text-primary">Introduction to Cloud Computing</h3>
                         <p class="text-secondary mt-1">Issued by Coursera | July 2025</p>
-                        <div class="mt-2 flex flex-wrap gap-2">
-                            <span
-                                class="text-xs font-medium bg-purple-100 text-purple-800 dark:bg-purple-900 dark:text-purple-100 px-2.5 py-0.5 rounded"></span>
-                            <span
-                                class="text-xs font-medium bg-purple-100 text-purple-800 dark:bg-purple-900 dark:text-purple-100 px-2.5 py-0.5 rounded"></span>
-                            <span
-                                class="text-xs font-medium bg-purple-100 text-purple-800 dark:bg-purple-900 dark:text-purple-100 px-2.5 py-0.5 rounded"></span>
-                        </div>
                     </div>
                     <div class="flex-shrink-0 ml-4">
-                        <a href="#" class="inline-flex items-center text-primary font-semibold hover:underline">
+                        <a href="https://drive.google.com/file/d/1ig1UupvESRWuIdIz7abxDevUTrNw5pkw/view?usp=sharing" class="inline-flex items-center text-primary font-semibold hover:underline">
                             View Certificate
                             <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -380,17 +369,9 @@
                     <div>
                         <h3 class="text-xl font-bold text-primary">English for IT 1</h3>
                         <p class="text-secondary mt-1">Issued by Cisco | December 2024</p>
-                        <div class="mt-2 flex flex-wrap gap-2">
-                            <span
-                                class="text-xs font-medium bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
-                            <span
-                                class="text-xs font-medium bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
-                            <span
-                                class="text-xs font-medium bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
-                        </div>
                     </div>
                     <div class="flex-shrink-0 ml-4">
-                        <a href="#" class="inline-flex items-center text-primary font-semibold hover:underline">
+                        <a href="https://drive.google.com/file/d/1aehjwzhSaeLbWOoJz7WbDtgSpQDn8YDR/view?usp=sharing" class="inline-flex items-center text-primary font-semibold hover:underline">
                             View Certificate
                             <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -406,17 +387,27 @@
                     <div>
                         <h3 class="text-xl font-bold text-primary">Networking Basics</h3>
                         <p class="text-secondary mt-1">Issued by Cisco | December 2024</p>
-                        <div class="mt-2 flex flex-wrap gap-2">
-                            <span
-                                class="text-xs font-medium bg-yellow-100 text-pink-800 dark:bg-pink-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
-                            <span
-                                class="text-xs font-medium bg-yellow-100 text-pink-800 dark:bg-pink-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
-                            <span
-                                class="text-xs font-medium bg-yellow-100 text-pink-800 dark:bg-pink-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
-                        </div>
                     </div>
                     <div class="flex-shrink-0 ml-4">
-                        <a href="#" class="inline-flex items-center text-primary font-semibold hover:underline">
+                        <a href="https://drive.google.com/file/d/1m8d7p2b0YuHMSZAUdVKw-ySL4bGA0sIz/view?usp=sharing" class="inline-flex items-center text-primary font-semibold hover:underline">
+                            View Certificate
+                            <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4m-4-2l4-4m0 0l-4-4m4 4H8">
+                                </path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="py-4 px-6 rounded-lg shadow-md flex justify-between items-start">
+                    <div>
+                        <h3 class="text-xl font-bold text-primary">Postman-Postman API Fundamentals Student Expert</h3>
+                        <p class="text-secondary mt-1">Issued by Postman | July 2025</p>
+                    </div>
+                    <div class="flex-shrink-0 ml-4">
+                        <a href="https://drive.google.com/file/d/1nnslovXZrWUgT_SZC135ncKrkDKZfZwS/view?usp=sharing" class="inline-flex items-center text-primary font-semibold hover:underline">
                             View Certificate
                             <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -468,16 +459,3 @@
 </body>
 
 </html>
-
-
-<!-- colossuem
-gssoc
-open source
-cloud internship 
-prodigy -->
-
-<!-- sidcup
-webrtc
-agroconnect
-todolist
-campusties -->
